Add filtering option (#100)
* Added option to filter certificates

* Updated docs